--- a/phased_layer_tunnel/Gemfile
+++ b/phased_layer_tunnel/Gemfile
@@ -2,6 +2,7 @@
 source "http://rubygems.org"
 gem 'sinatra'
 gem 'rack'
+#gem 'rake', '0.9.2'
 gem 'rack-session-stack'
 gem 'sinatra_warden'
 gem 'activerecord'
