restructure to only run sshd in chroot jail

--- a/phased_layer_tunnel/Gemfile
+++ b/phased_layer_tunnel/Gemfile
@@ -2,14 +2,11 @@
 source "http://rubygems.org"
 gem 'sinatra'
 gem 'rack'
-#gem 'rake', '0.9.2'
 gem 'rack-session-stack'
-gem 'sinatra_warden'
 gem 'activerecord'
 gem 'unicorn'
 gem 'rails'
 gem 'mysql'
-gem 'beanstalk-client'
-#gem 'ruby-debug19'
 gem 'platform_helpers'
 gem 'wait_for'
+gem 'warden'
